Fix social icon overflow on mobile

--- a/style.css
+++ b/style.css
@@ -297,6 +297,10 @@ object-fit: contain;
     text-align: center;
     padding: 0em 0em 0em 1.5em;
   }
+  #socialMedia img {
+    width: 55%; /* adjust this value as needed */
+    max-width: 100%; 
+  }
   /* Adjust the layout of contentBox2, contentBox3, and contentBox4 and take out the animal pics */
   .animals { display: none; }
   .left-content { width: 100%; }
